--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+jspdf/node_modules
 docxTemplater/node_modules
 modules/jvectormap/maps/jquery-jvectormap-belgium-merc-en.js
 modules/jvectormap/maps/jquery-jvectormap-canada-merc-en.js
