--- a/jspdf/package.json
+++ b/jspdf/package.json
@@ -30,7 +30,8 @@
   "dependencies": {
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
-    "jspdf-autotable": "^3.5.23"
+    "jspdf-autotable": "^3.5.23",
+    "webpack-merge-and-include-globally": "^2.3.4"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
